package Things;

public class Amphibians extends Vertebrates{
}
