package Things;

public class Animals extends LivingThings{
}
