package Things;

public class Aves extends Vertebrates{
}
