package Things;

public class Invertebrates extends Animals{
}
