package Things;

public class LivingThings extends Thing {
}
