package Things;

public class Mammals extends Vertebrates{
}
