package Things;

public class NonLivingThings extends Thing {
}
