package Things;

public class Pisces extends Vertebrates{
}
