package Things;

public class Plants extends LivingThings{
}
