package Things;

public class Reptiles extends Vertebrates{
}
