package Things;

public class Thing {
}
