package Things;

public class Vertebrates extends Animals{
}
